--- a/testerccdashboard/inst/doc/erccdashboardVignette.tex
+++ b/testerccdashboard/inst/doc/erccdashboardVignette.tex
@@ -12,19 +12,14 @@
 \DefineVerbatimEnvironment{Scode}{Verbatim}{xleftmargin=1em}
 \fvset{listparameters={\setlength{\topsep}{0pt}}}
 \renewenvironment{Schunk}{\vspace{\topsep}}{\vspace{\topsep}}
-    
-\title{{\tt testerccdashboard} Package Example}
+\title{{\tt erccdashboard} Package Vignette}
 \author{Sarah A. Munro}
 \maketitle
 
-\begin{center}
-\Large
-{\tt erccdashboard} Package Vignette
-\normalsize
-\end{center}
 This vignette describes the use of the erccdashboard R package to analyze 
 External RNA Control Consortium (ERCC) spike-in control ratio mixtures in gene
-expression experiments. Two types of data from the SEQC/MAQC III project were analyzed.
+expression experiments. Two types of data from the SEQC/MAQC III project were 
+analyzed.
 \begin{enumerate}
   \item Rat toxicogenomics treatment and control samples for different drug 
   treatments
@@ -33,8 +28,7 @@ expression experiments. Two types of data from the SEQC/MAQC III project were an
 \end{enumerate}
 
 \section{Rat Toxicogenomics Example: MET treatment}
-\subsection{Define input data and parameters}
-
+\subsection{Load data and define input parameters}
 Load the testerccdashboard package. 
 \begin{Schunk}
 \begin{Sinput}
@@ -72,33 +66,51 @@ Take a look at the data for the MET experiment.
 \end{Soutput}
 \end{Schunk}
 The first column of the count table, Feature, contains unique names for all
-the transcripts that were quantified in this experiment. The remaining columns
+the transcripts that were quantified in this experiment. The remaining columns 
 represent replicates of the pair of samples, in this count table 
-the control sample is labeled CTL and the treatment sample is labeled MET. An underscore is included to separate the sample names from the replicate numbers during analysis. This naming convention Sample\textunderscore{}Rep is needed for the columns of any input count table.
+the control sample is labeled CTL and the treatment sample is labeled MET. An 
+underscore is included to separate the sample names from the replicate numbers 
+during analysis. This naming convention Sample\textunderscore{}Rep is needed 
+for the columns of any input count table.
 
 The total reads vectors will be used for library size normalization of the count
 tables. Total reads can either represent the total number of reads in FASTQ 
 files or total mapped reads. In the examples provided with this package FASTQ 
 file total reads are used.
 
-For our analysis of the MET-CTL experiment start by assigning the MET-CTL data to the input data variables countTable and totalReads.
+For our analysis of the MET-CTL experiment start by assigning the MET-CTL data 
+to the input data variables countTable and totalReads.
 \begin{Schunk}
 \begin{Sinput}
 > countTable <- COH.RatTox.ILM.MET.CTL.countTable
 > totalReads <- COH.RatTox.ILM.MET.CTL.totalReads
 \end{Sinput}
 \end{Schunk}
-In addition to countTable and totalReads, there are 7 additional variables that must be defined by the user. First the filename prefix for results files, filenameRoot, needs to be defined. Here we choose to use the lab abbreviation COH and the platform abbreviation ILM as our identifiers, but this is flexible for the user.
+In addition to countTable and totalReads, there are 7 additional variables that
+must be defined by the user. First the filename prefix for results files, 
+filenameRoot, needs to be defined. Here we choose to use the lab abbreviation 
+COH and the platform abbreviation ILM as our identifiers, but this is flexible
+for the user.
 \begin{Schunk}
 \begin{Sinput}
 > filenameRoot = "COH.ILM"
 \end{Sinput}
 \end{Schunk}
-Next, 5 parameters associated with the ERCC control ratio mixtures need to be defined, sample1Name, sample2Name, ERCCdilution, spikeVol, and totalRNAmass.
+Next, 5 parameters associated with the ERCC control ratio mixtures need to be
+defined, sample1Name, sample2Name, ERCCdilution, spikeVol, and totalRNAmass.
 
-The sample spiked with ERCC Mix 1 is sample1Name and the sample spiked with ERCC Mix 2 is sample2Name. In this experiment sample1Name = MET and sample2Name = CTL. For a more robust experimental design the reverse spike-in design could also be produced using additional replicates of the treatment and control samples. ERCC Mix 2 would be spiked into MET samples and ERCC Mix 1 would be spiked into CTL control replicates. 
+The sample spiked with ERCC Mix 1 is sample1Name and the sample spiked with 
+ERCC Mix 2 is sample2Name. In this experiment sample1Name = MET and 
+sample2Name = CTL. For a more robust experimental design the reverse spike-in 
+design could be created using additional replicates of the treatment and 
+control samples. ERCC Mix 2 would be spiked into MET samples and ERCC Mix 1 
+would be spiked into CTL control replicates. 
 
-The dilution factor of the pure Ambion ERCC mixes prior to spiking is ERCCdilution. If no dilution was performed then ERCCdilution should be 1. The amount of diluted ERCC mix spiked into the total RNA sample is spikeVol (units are $\mu$L). The mass of total RNA spiked with the diluted ERCC mix is totalRNAmass (units are $\mu$g )
+ERCCdilution is the dilution factor of the pure Ambion ERCC mixes prior to 
+spiking into total RNA samples. Here a 1/100 dilution was made from the Ambion 
+ERCC mixes according to the protocol. The amount of diluted ERCC mix spiked into
+the total RNA sample is spikeVol (units are $\mu$L). The mass of total RNA 
+spiked with the diluted ERCC mix is totalRNAmass (units are $\mu$g ).
 \begin{Schunk}
 \begin{Sinput}
 > sample1Name = "MET"
@@ -108,27 +120,31 @@ The dilution factor of the pure Ambion ERCC mixes prior to spiking is ERCCdiluti
 > totalRNAmass = 0.500
 \end{Sinput}
 \end{Schunk}
-The final required input parameter, choseFDR, is the False Discovery Rate (FDR) for differential expression testing. A typical choice would be 0.05 (5\% FDR), for the rat data a more liberal FDR was used, choseFDR = 0.1.
+The final required input parameter, choseFDR, is the False Discovery Rate (FDR) 
+for differential expression testing. A typical choice would be 0.05 (5\% FDR), 
+for the rat data sets a more liberal FDR was used, choseFDR = 0.1.
 \begin{Schunk}
 \begin{Sinput}
 > choseFDR = 0.1
 \end{Sinput}
 \end{Schunk}
-In addition to the required input variables the user can also choose whether to print the results directly to a PDF file (the default is TRUE) with the variable printPDF.
-\subsection{Use initDat function to create expDat}
+In addition to the required input variables the user can also choose whether to 
+print the results directly to a PDF file (the default is TRUE) with the variable
+printPDF.
+
+\subsection{Initialize the expDat list for analysis}
 The expDat list is created with the initDat function:
 \begin{Schunk}
 \begin{Sinput}
 > expDat <- initDat(countTable, totalReads, filenameRoot, sample1Name,
-                    sample2Name, ERCCdilution, spikeVol, totalRNAmass, choseFDR,
-                    printPDF = F)
+                    sample2Name, ERCCdilution, spikeVol, totalRNAmass, choseFDR)
 \end{Sinput}
 \begin{Soutput}
-[1] "COH.ILM.MET.CTL"
-[1] "Library sizes:"
-[1] 41.42350 46.01615 44.32028 38.40036 47.51148 33.91010
-[1] "Using total sequencing reads mean library size = "
-[1] 41.93031
+Filename root is: COH.ILM.MET.CTL 
+Library sizes:
+41.4235 46.01615 44.32028 38.40036 47.51148 33.9101
+Using total sequencing reads,
+ mean library size factor = 41.93031
 \end{Soutput}
 \end{Schunk}
 Look at the structure of expDat
@@ -138,7 +154,7 @@ Look at the structure of expDat
 \end{Sinput}
 \begin{Soutput}
                 Length Class      Mode      
-sampleInfo      17     -none-     list      
+sampleInfo      16     -none-     list      
 totalReads       6     -none-     numeric   
 Transcripts      7     data.frame list      
 designMat        3     data.frame list      
@@ -154,11 +170,18 @@ mnLibeFactor     1     -none-     numeric
 sampleLibeSums   6     -none-     numeric   
 \end{Soutput}
 \end{Schunk}
-Estimate r$_m$ for the sample pair using a negative binomial glm
+The expDat list will be passed to the erccdashboard functions for analysis of 
+technical performance.
+
+\subsection{Estimate the mRNA fraction difference, r$_m$ for the pair of 
+samples}
+Estimate r$_m$ for the sample pair using a negative binomial glm. The r$_m$ 
+results will be added to the expDat structure and are necessary for the 
+remaining analysis.
 \begin{center}
 \begin{Schunk}
 \begin{Sinput}
-> expDat <- est_r_m(expDat, cnt = expDat$Transcripts, printPlot = T)
+> expDat <- est_r_m(expDat, cnt = expDat$Transcripts, printPlot = F)
 \end{Sinput}
 \begin{Soutput}
 Check for sample mRNA fraction differences(r_m)...
@@ -168,23 +191,35 @@ log.offset
 
 Number of ERCC Controls Used in r_m estimate
 63 
+
 Outlier ERCCs for GLM r_m Estimate:
 None 
- GLM log(r_m) estimate:
--0.0472291GLM log(r_m) estimate standard deviation:
+
+GLM log(r_m) estimate:
+-0.0472291 
+
+GLM log(r_m) estimate standard deviation:
 0.02061546 
-63 
- GLM r_m estimate:
+ 
+GLM r_m estimate:
 0.9538688 
-upper limit
+
+GLM r_m upper limit
 0.9599503 
-lower limit
+
+GLM r_m lower limit
 0.9478259 
 \end{Soutput}
 \end{Schunk}
-\includegraphics{erccdashboardVignette-est_r_m}
 \end{center}
-Test for differential expression with geneExprTest
+
+\subsection{Test for differential expression}
+Test for differential expression with the geneExprTest function. This function
+wraps the QuasiSeq differential expression testing package. If a correctly
+formatted csv file is provided with the necessary DE test results, then 
+geneExprTest will bypass DE testing (with reduced runtime). The function will
+look for a csv file with the name "filenameRoot.quasiSeq.res.csv" and the first
+3 column headers of the file must be "Feature", "pvals", and "qvals".
 \begin{center}
 \begin{Schunk}
 \begin{Sinput}
@@ -193,35 +228,39 @@ Test for differential expression with geneExprTest
 \end{Sinput}
 \begin{Soutput}
  Differential expression test results exist, will use   
- existing results for analysis. No dispersion plots will
- be produced. Delete COH.ILM.MET.CTL.quasiSeq.res.csv if  
+ existing results for analysis. Delete COH.ILM.MET.CTL.quasiSeq.res.csv if  
  you want to repeat differential expression testing.    
 
 Threshold P-value
-0.006679804 
+0.006689177 
 \end{Soutput}
 \end{Schunk}
 \end{center}
-Generate ROC curves for the selected differential ratios
+
+\subsection{Diagnostic Performance: ROC curves and AUC statistics}
+Generate ROC curves for the differential ratios and the corresponding Area Under
+the Curve (AUC) statistics.
 \begin{center}
 \begin{Schunk}
 \begin{Sinput}
-> erccROC.res = erccROC(expDat)
+> expDat = erccROC(expDat)
 \end{Sinput}
 \begin{Soutput}
+Area Under the Curve (AUC) Results:
   Ratio   AUC Measured Spiked
 1   4:1 1.000       16     23
 2 1:1.5 0.950       16     23
 3   1:2 0.967       16     23
 \end{Soutput}
 \end{Schunk}
-\includegraphics{erccdashboardVignette-erccROC}
 \end{center}
+
+\subsection{Diagnostic Performance: Limit of Detection of Ratios (LODR)}
 Find LODR estimates using the ERCC data p-values.
 \begin{center}
 \begin{Schunk}
 \begin{Sinput}
-> lodr.ERCC = estLODR(expDat,kind = "ERCC", prob=0.9)
+> expDat = estLODR(expDat,kind = "ERCC", prob=0.9)
 \end{Sinput}
 \begin{Soutput}
   Ratio LODR Estimate 90% CI Lower Bound 90% CI Upper Bound
@@ -230,29 +269,30 @@ Find LODR estimates using the ERCC data p-values.
 4   1:2           240                120                340
 \end{Soutput}
 \end{Schunk}
-\includegraphics{erccdashboardVignette-estLODRERCC}
 \end{center}
+
+
 One can also obtain LODR estimates using p-values simulated from endogenous transcripts
 \begin{center}
 \begin{Schunk}
 \begin{Sinput}
-> lodr.Sim = estLODR(expDat, kind = "Sim", prob = 0.9)  
+> expDat = estLODR(expDat, kind = "Sim", prob = 0.9)  
 \end{Sinput}
 \begin{Soutput}
   Ratio LODR Estimate 90% CI Lower Bound 90% CI Upper Bound
-1   4:1            33                 23                 54
+1   4:1            17                 13                 22
 3 1:1.5           Inf               <NA>               <NA>
 4   1:2           Inf               <NA>               <NA>
 \end{Soutput}
 \end{Schunk}
-\includegraphics{erccdashboardVignette-estLODRSim}
 \end{center}
+
 \subsection{Use dynRangePlot function to evaluate dynamic range data}
 Evaluate the dynamic range of the experiment using the ERCC controls.
 \begin{center}
 \begin{Schunk}
 \begin{Sinput}
-> dynRangeDat = dynRangePlot(expDat, expressDat = expDat$expressDat,
+> expDat <- dynRangePlot(expDat, expressDat = expDat$expressDat,
                              designMat = expDat$designMat, noErrorBars = F)
 \end{Sinput}
 \begin{Soutput}
@@ -268,15 +308,15 @@ controls were obtained for both samples:
  [9] "ERCC-00154" "ERCC-00158"
 \end{Soutput}
 \end{Schunk}
-\includegraphics{erccdashboardVignette-dynRangeDat}
 \end{center}
-\subsection{Use LODR estimates to annote Ratio-Abundance Plot}
-Get LODR annotations for adding to plots and then annotate the dynamic range plot with LODR estimate information.
-\begin{center}
+
+\subsection{Use LODR estimates to Annotate Signal-Abundance and Ratio-Abundance Plots}
+Get LODR annotations for adding to plots and then annotate the signal-abundance
+and ratio-abundance plots using LODR estimate information 
+
 \begin{Schunk}
 \begin{Sinput}
-> LODR.annot.ERCC <- printLODRres(expDat, dynRangeDat,
-                                  lodr.res = lodr.ERCC)
+> expDat <- annotLODR(expDat)
 \end{Sinput}
 \begin{Soutput}
    Fold Ratio Count Log2Count_normalized  Log2Conc
@@ -284,22 +324,6 @@ Get LODR annotations for adding to plots and then annotate the dynamic range plo
 2   1:1   1:1    NA                   NA        NA
 3 1:1.5 1:1.5   Inf                  Inf       Inf
 4   1:2   1:2   240             2.516969  2.172251
-\end{Soutput}
-\begin{Sinput}
-> dynRangePlotLODR(dynRangeRes = dynRangeDat$dynRangePlotRes,
-                   LODR.annot.ERCC = LODR.annot.ERCC)
-\end{Sinput}
-\end{Schunk}
-\includegraphics{erccdashboardVignette-dynRangeLODRAnnot}
-\end{center}
-Generate MA plots of erccs coded by concentrations from LODR
-\begin{center}
-\begin{Schunk}
-\begin{Sinput}
-> maPlotAB = maConcPlot(expDat, LODR.annot.ERCC, alphaPoint = 0.8, r_mAdjust = T, 
-                        replicate = T)
-\end{Sinput}
-\begin{Soutput}
 [1] "LODR estimates will be used to code ratio-abundance plot"
 [1] "These ERCCs were not included in the ratio-abundance plot,  because not enough non-zero replicate measurements of these  controls were obtained for both samples:"
  [1] "ERCC-00028" "ERCC-00033" "ERCC-00040" "ERCC-00058"
@@ -318,12 +342,49 @@ Lambda              3.158191e-09
 [1] "Printing MA plot with LODR coding"
 \end{Soutput}
 \end{Schunk}
-\includegraphics{erccdashboardVignette-maConcPlot}
+\begin{center}
+\begin{Schunk}
+\begin{Sinput}
+> expDat$Figures$plotdynRangeAnnot
+\end{Sinput}
+\end{Schunk}
+\includegraphics{erccdashboardVignette-printPanelD}
 \end{center}
+\begin{center}
+\begin{Schunk}
+\begin{Sinput}
+> expDat$Figures$plotERCCeffects
+\end{Sinput}
+\end{Schunk}
+\includegraphics{erccdashboardVignette-printPanelE}
+\end{center}
+\begin{center}
+\begin{Schunk}
+\begin{Sinput}
+> expDat$Figures$plotRatioAnnot
+\end{Sinput}
+\end{Schunk}
+\includegraphics{erccdashboardVignette-printPanelF}
+\end{center}
+
+\subsection{Output Results for Comparisons Across Experiments or Laboratories}
 If you wish, save your results to an Rdata file that can be reused.
 \begin{Schunk}
 \begin{Sinput}
-> saveResults(expDat, erccROC.res, maPlotAB, lodr.ERCC)
+> saveResults(expDat)
 \end{Sinput}
 \end{Schunk}
+You can also save any of the figures to pdf for additional use. The helper function
+savePlots will output selected figures to individual pages or place multiple
+figures per page in a pdf file
+\begin{Schunk}
+\begin{Sinput}
+> savePlots(expDat)
+\end{Sinput}
+\end{Schunk}
+
+\section{SEQC Reference RNA Examples: UHRR vs. HBRR}
+\subsection{Load data and define input parameters}
+
+
 \end{document}
